	  support/regression/tests/bug2686159.c,
	  support/regression/tests/bug3027957.c,
	  support/regression/tests/bug3379723.c,
	  support/regression/tests/bug3482146.c,
	  support/regression/tests/gcc-torture-execute-20021120-3.c,
	  support/regression/tests/gcc-torture-execute-20030626-2.c:
	  Disable some tests for pdk15, on which they won't work anytime soon.

2019-04-06 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/aspdk13/pdk13pst.c,
	  sdas/aspdk13/pdk13mch.c:
	  Assembler fixes.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk13/pdk13mch.c,
	  sdas/aspdk13/pdk13pst.c:
	  Assembler fix, patch by Leo.
	* sim/ucsim/pdk.src/pdk.cc:
	  Simulator fix, patch by Nicolas Lesser.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version in preparation of 3.9.0 release.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/*:
	  Disable some tests for pdk15, on which they won't work anytime soon.
	* sdas/aspdk15/pdk15mch.c
	  Assembler fix, patch by Nicolas Lesser.
	* sim/ucsim/pdk.src/inst.cc,
	  sim/ucsim/pdk.src/pdk.cc,
	  sim/ucsim/pdk.src/regspdk.h:
	  Simulator fix, patch by Nicolas Lesser.
	* sdas/aspdk13/pdk13mch.c:
	  Assembler fix, patch by Leo.

2019-04-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-2274.c:
	  Support dummy write for handling of uninitialized variables, better code for write of literal to bit-field.
	* sim/ucsim/pdk.src/inst.cc:
	  Fix dec m for pdk15.
	* support/regression/tests/bitfields.c,
	  support/regression/tests/bug-2181.c,
	  support/regression/tests/bug-2197.c,
	  support/regression/tests/bug-221100.c,
	  support/regression/tests/bug-221168.c,